# emidm

./: .buildinfo  .gitignore  .nojekyll  CHANGELOG.md  LICENSE.txt  README.md  _quarto.yml  development.html  index.html  index.qmd  jax_fundamentals.html  model_structure.html  objects.inv  pyproject.toml  pytest.ini  requirements.txt  robots.txt  search.json  searchindex.js  sitemap.xml  slides.html  tutorials.html  user_guide.html  writing_jax_models.html
.doctrees/: end_to_end_differentiability.doctree  environment.pickle  index.doctree  model_structure.doctree  slides.doctree  tutorials.doctree  user_guide.doctree  writing_jax_models.doctree
.doctrees/notebooks/: AIMS_surrogate_notebook.doctree  bayesian_inference.doctree  calibration.doctree  safir_inference.doctree  surrogate.doctree
.github/workflows/: docs.yml  preview.yml  publish.yml  tests.yml
_freeze/index/execute-results/: html.json
_sources/: end_to_end_differentiability.md.txt  tutorials.rst.txt  user_guide.rst.txt  writing_jax_models.md.txt
_sources/notebooks/: AIMS_surrogate_notebook.ipynb.txt  bayesian_inference.ipynb.txt  surrogate.ipynb.txt
docs/: api.rst  calibration.rst  conf.py  contributing_models.md  development.rst  examples.rst  index.rst  model_structure.md  tutorials.rst  user_guide.rst
docs/notebooks/: AIMS_surrogate_notebook.ipynb  bayesian_inference.ipynb  calibration.ipynb  intro.ipynb  safir_inference.ipynb  surrogate.ipynb
examples/: AIMS_surrogate_notebook.html  AIMS_surrogate_notebook.ipynb  notebooks_intro.html  notebooks_intro.ipynb  surrogate_notebook copy.html  surrogate_notebook copy.ipynb  surrogate_notebook.html  surrogate_notebook.ipynb
notebooks/: AIMS_surrogate_notebook.html  bayesian_inference.html  calibration.html  safir_inference.html  surrogate.html
previews/pr-5/: api.html  calibration.html  development.html  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  slides.html  tutorials.html  user_guide.html
previews/pr-5/.doctrees/: api.doctree  calibration.doctree  development.doctree  environment.pickle  examples.doctree  index.doctree  tutorials.doctree  user_guide.doctree
previews/pr-5/_sources/: api.rst.txt  index.rst.txt  tutorials.rst.txt
previews/pr-5/examples/: AIMS_surrogate_notebook.html  notebooks_intro.html  surrogate_notebook.html
previews/pr-5/notebooks/: AIMS_surrogate_notebook.html  bayesian_inference.html  calibration.html  intro.html  safir_inference.html  (+1 more)
previews/pr-6/: api.html  contributing_models.html  end_to_end_differentiability.html  searchindex.js
site_libs/bootstrap/: bootstrap-9c245f825b8ac43adf22c0b73e682e18.min.css  bootstrap-a2d40cff46cfa368e30066d77f4812ab.min.css  bootstrap-c4489ffe573f2968ad8bebdc5c48965c.min.css  bootstrap-e9d65dfb09f763701636dad9f72af8f2.min.css  bootstrap-fd8d075d064eb9396bb9f19ceb9259f5.min.css
slides/: .gitignore  emidm_intro1.html  emidm_intro1.qmd  emidm_intro1.quarto_ipynb  slides.css
src/emidm/: __about__.py  __init__.py  add_numbers.py  diff.py  inference.py  optim.py  plotting.py  registry.py  safir.py  sampler.py  sir.py  surrogate_notebook.ipynb  utils.py
tests/: conftest.py  test_calibration_demo.py  test_diff.py  test_inference.py  test_optim.py  test_plotting.py  test_registry.py  test_safir.py  test_sir.py  test_smoke_imports.py
(+42 files in other folders)
