[build-system]
requires = ["hatchling", "packaging>=24.2,<25"]
build-backend = "hatchling.build"

[project]
name = "emidm"
version = "0.1.13"
description = 'A simple package for demonstrating emulators for infectious disease modelling'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["infectious disease model", "emulators"]
authors = [
  { name = "OJWatson", email = "o.watson15@imperial.ac.uk" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dependencies = [
  "numpy>=2.0.2",
  "pandas>=2.2.2",
  "plotnine>=0.14.5",
  "scipy>=1.14.1",
  "matplotlib>=3.8.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
]

docs = [
  "sphinx>=8",
  "pydata-sphinx-theme>=0.16",
  "myst-parser>=4",
  "jupyter>=1",
]

jax = [
  "jax>=0.4.20",
  "jaxlib>=0.4.20",
  "optax>=0.2.2",
]

bayes = [
  "blackjax>=1.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Documentation = "https://github.com/OJWatson/emidm#readme"
Issues = "https://github.com/OJWatson/emidm/issues"
Source = "https://github.com/OJWatson/emidm"

